Improved layout of dump form.
---- Changes since 1.160 ----
Added module configuration option to prevent prompting for a new tape if the curent one runs out of space.
---- Changes since 1.170 ----
When scheduling a dump, it can be specified to run after the completion of another backup dump. This makes it easy to backup multiple directories to a single tape.
When creating a TAR format backup, multiple directories can be entered.
---- Changes since 1.180 ----
A password can now be specified for remote backups and restores via SSH, on Linux and BSD systems.
---- Changes since 1.210 ----
Added options on Linux systems to verify a backup once it is complete, and to re-mount with the noatime option when backing up.
---- Changes since 1.260 ----
If the before-backup command fails, the entire backup is halted.
Added support for bzipping TAR archives on Linux systems.
---- Changes since 1.270 ----
Added checkboxes and a button for deleting multiple backups at once.
The backup message subject can include variables like ${HOSTNAME}, which will be substituted when the email is sent.
---- Changes since 1.290 ----
Made the backup and new tape email contents translatable.
Added an option for setting the path to the remote rmt command for tar format backups on Linux.
On Linux and BSD systems, backups and restores in TAR or EXT formats can be done via FTP as well as SSH, RSH and to local files.
---- Changes since 1.320 ----
Added a warning if % is used in filenames but strftime substition is not enabled.
---- Changes since 1.390 ----
When making tar format backups on Linux, an option to just append new files to the archive instead of over-writing it is available.
---- Changes since 1.400 ----
Fixed remote tar backups via FTP on OSX.
Files and directories to exclude can be specified for TAR format backups on Linux.
---- Changes since 1.410 ----
Added checkboxes to control if failure of the pre and post-backup commands cause the whole job to be regarded as a failure.