@@ -5,5 +5,8 @@ is chosen, every file under the directory to backup will be saved. Otherwise,
 only files that are new or modified since the last dump of a lower level will
 be written. <p>
 
+When backing up a directory that is not a filesystem mount point, the only
+level that can be selected in 0. <p>
+
 <hr>
 
