@@ -1,7 +1,6 @@
 <header>Update /etc/dumpdates file?</header>
 
-When this option is enabled, the date, time, source and destination of the backup
-will be recorded in human-readable form in <tt>/etc/dumpdates</tt>. <p>
+This option can only be enabled when backing up an entire filesystem. When enabled, the source filesystem device name, level, date and time of the backup will be recorded in human-readable form in <tt>/etc/dumpdates</tt>. There may be only one entry per filesystem at each level. This option is useful when using the <tt>dump -W</tt> command-line option to display the most recent dump date and level of each filesystem.<p>
 
 <hr>
 
